# WB-Meshtastic-control

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.wb.yml  docker-compose.yml  pyproject.toml  self_test.py  self_test_v2.py  test_parser.py  test_parsing_clean.py
config/: controls.yaml  rules.example.yaml  rules.yaml
deploy/: info.sh  install_wb.sh  install_wb_clean.sh  setup_ssh.py  setup_ssh.sh  systemd_wb-meshtastic.service
wb_meshtastic_control/: api.py  config.py  mesh_service.py  models.py  relay_backends.py  rules.py  service.py  storage.py
wb_meshtastic_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
